# RustServerDemo

./: readme.md
db/: Cargo.toml  course.sql  db.sql  teacher.sql
db/src/: main.rs
s1/: Cargo.toml
s1/http/src/: httprequest.rs  httpresponse.rs
s1/httpserver/data/: orders.json
s1/httpserver/public/: 404.html  index.html  style.css
s1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
s2/: Cargo.toml
s2/http/src/: httprequest.rs  httpresponse.rs
s2/httpserver/: Cargo.toml
s2/httpserver/public/: health.html
s2/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
s2/tcpclient/src/: main.rs
s2/tcpserver/src/: main.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: index.js  package-lock.json  webpack.config.js
ws/: Cargo.toml
ws-2/: Cargo.toml
ws-2/webapp/: .env  Cargo.toml
ws-2/webapp/src/: errors.rs  handlers.rs  main.rs  models.rs  routers.rs
ws-2/webapp/static/: index.html  register.html  teachers.html
ws-2/webservice/: .env  Cargo.toml
ws-2/webservice/src/: errors.rs  routers.rs  state.rs
ws-2/webservice/src/dbaccess/: course.rs  teacher.rs
ws-2/webservice/src/handler/: course.rs  general.rs  teacher.rs
ws-2/webservice/src/models/: course.rs  teacher.rs
ws/wasm-client/: Cargo.toml
ws/wasm-client/src/: errors.rs  index.html  index.js  lib.rs
ws/wasm-client/src/models/: course.rs
ws/wasm-client/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
ws/webapp/: .env  Cargo.toml
ws/webapp/src/: errors.rs  handlers.rs  models.rs  routers.rs
ws/webapp/static/: register.html  teachers.html
ws/webservice/: .env  Cargo.toml
ws/webservice/src/: errors.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
(+9 files in other folders)
