[package]
name = "wasm-client"
version = "0.1.0"
authors = ["windofme1109 <wuzengyan1314@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]} 

serde ={ version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"
js-sys = "0.3.56"
wasm-bindgen = {version = "0.2.84", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.29"
web-sys = {version = "0.3.56", features = [
    "Headers", 
    "Request", 
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "console",
    "HtmlButtonElement",
    "MouseEvent",
    "Location"
]}
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
